<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tipcal</string>
    <string name="action_settings">Settings</string>
    
    <string name="billTextView">Bill</string>
    <string name="billEditText">0.00</string>
	<string name="tipTextView">Tip</string>
	<string name="tipEditText">15</string>
    <string name="finalBillTextView">Final Bill</string>
    <string name="finalBillEditText">0.00</string>
    <string name="changeTipTextView">Tip</string>
    <string name="adjustTipTextView">Adjust Tip:  </string>
    <string name="percentTextView">%</string>
    <string name="amountToTipTextView">0.00</string>
    <string name="introTextView">Introduction</string>
    <string name="introFriendlyTextView">Friendly</string>
    <string name="introSpecialsTextView">Specials</string>
    <string name="introOpinionTextView">Opinion</string>
    
    <string name="hotnessFactorTextView">How Hot?</string>
    <string name="hotnessColdRadioBttn">Cold</string>
    <string name="hotnessWarmRadioBttn">Warm</string>
    <string name="hotnessSmokinHotRadioBttn">Smokin\' Hot</string>
    
    <string name="timeWaitingTextView">Time Waiting for Service</string>
    <string name="startTimerBttn">Start</string>
    <string name="pauseTimerBttn">Pause</string>
    <string name="resetTimerBttn">Reset</string>
    <string name="resetAllBttn">Reset All</string>
    
    <string-array name="problemSolving">
        <item>Problem Solving</item>
        <item>Bad</item>
        <item>Ok</item>
        <item>Good</item>        
    </string-array>
    
    
    
    
    
    

</resources>
