<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.tipcal.MainActivity$PlaceholderFragment" >

    <EditText
        android:id="@+id/billEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/billTextView"
        android:layout_toRightOf="@+id/billTextView"
        android:ems="4"
        android:inputType="numberDecimal"
        android:text="@string/billEditText" />

    <TextView
        android:id="@+id/billTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/billTextView" />

    <TextView
        android:id="@+id/adjustTipTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/billTextView"
        android:layout_below="@+id/billEditText"
        android:layout_marginTop="16dp"
        android:text="@string/adjustTipTextView" />

    <TextView
        android:id="@+id/tipEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/adjustTipTextView"
        android:layout_alignRight="@+id/tipSeekBar"
        android:layout_marginRight="48dp"
        android:ems="3"
        android:inputType="numberDecimal"
        android:text="@string/tipEditText" />

    <EditText
        android:id="@+id/finalBillEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/finalBillTextView"
        android:layout_toRightOf="@+id/tipTextView"
        android:ems="5"
        android:inputType="numberDecimal"
        android:text="@string/finalBillEditText" />

    <TextView
        android:id="@+id/finalBillTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/finalBillEditText"
        android:layout_below="@+id/tipSeekBar"
        android:text="@string/finalBillTextView" />

    <SeekBar
        android:id="@+id/tipSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/adjustTipTextView"
        android:layout_centerHorizontal="true"
        android:progress="15" />

    <TextView
        android:id="@+id/percentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/adjustTipTextView"
        android:layout_alignRight="@+id/tipEditText"
        android:layout_marginRight="14dp"
        android:ems="1"
        android:text="@string/percentTextView" />

    <TextView
        android:id="@+id/tipTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/billEditText"
        android:layout_toLeftOf="@+id/tipEditText"
        android:text="@string/tipTextView" />

</RelativeLayout>

